--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -4,7 +4,7 @@
       編集する
     </h3>
     <input placeholder="Image URL" type="text" name="image" value="<%= @tweet.image %>" autofocus="true"></input>
-    <textarea placeholder="text" name="text" cols="30" rows="10" ><%= @tweet.text %></textarea>
+    <textarea placeholder="text" text="name" cols="30" rows="10" ><%= @tweet.text %></textarea>
     <input type="submit" value="SENT">
   <% end %>
 </div>
