--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -7,7 +7,7 @@
           <%= link_to '編集', edit_tweet_path(tweet) %>
         </li>
         <li>
-          <%= link_to '削除', tweet_path(tweet), :method => :delete %>
+          <%= link_to '削除', tweet_path(tweet) %>
         </li>
       </ul>
     </div>
