--- a/app/views/tweets/craete.html.erb
+++ b/app/views/tweets/craete.html.erb
@@ -1,10 +1,8 @@
 <div class="contents row">
-  <%= form_tag("/tweets/#{@tweet.id}", :method => :patch) do %>
+    <div class="success">
       <h3>
-        編集する
+        投稿が完了しました。
       </h3>
-      <input placeholder="Image URL" type="text" name="image" value="<%= @tweet.image %>" autofocus="true"></input>
-      <textarea placeholder="text" text="name" cols="30" rows="10" ><%= @tweet.text %></textarea>
-      <input type="submit" value="SENT">
-  <% end %>
-</div>
+      <a class="btn" href="/tweets">投稿一覧へ戻る</a>
+    </div>
+  </div>
